--- a/src/Markdown.Xaml.Demo/Markdown.Demo.Styles.Default.xaml
+++ b/src/Markdown.Xaml.Demo/Markdown.Demo.Styles.Default.xaml
@@ -1,53 +1,46 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style TargetType="FlowDocument" x:Key="DocumentStyle">
-        <Setter Property="FontFamily"
-                Value="Calibri" />
-        <Setter Property="TextAlignment"
-                Value="Left" />
-        </Style>
 
-        <Style x:Key="H1Style"
-               TargetType="Paragraph">
-            <Setter Property="FontSize"
-                    Value="42" />
-            <Setter Property="Foreground"
-                    Value="#ff000000" />
-            <Setter Property="FontWeight"
-                    Value="Light" />
-        </Style>
+    <!-- Document Style -->
+    <Style x:Key="DocumentStyle" TargetType="FlowDocument">
+        <Setter Property="FontFamily" Value="Calibri" />
+        <Setter Property="TextAlignment" Value="Justify" />
+    </Style>
+    <!-- END Document Style -->
+    
+    <!-- Heading Style -->
+    <Style x:Key="HeadingStyle" TargetType="Paragraph">
+        <Setter Property="FontFamily" Value="Cambria" />
+        <Setter Property="Foreground" Value="#ff000000" />
+        <Setter Property="FontWeight" Value="Light" />
+    </Style>
 
-        <Style x:Key="H2Style"
-               TargetType="Paragraph">
-            <Setter Property="FontSize"
-                    Value="20" />
-            <Setter Property="Foreground"
-                    Value="#ff000000" />
-            <Setter Property="FontWeight"
-                    Value="Light" />
-        </Style>
+    <Style x:Key="H1Style" TargetType="Paragraph" BasedOn="{StaticResource HeadingStyle}">
+        <Setter Property="FontSize" Value="42" />
+    </Style>
 
-        <Style x:Key="H3Style"
-               TargetType="Paragraph">
-            <Setter Property="FontSize"
-                    Value="20" />
-            <Setter Property="Foreground"
-                    Value="#99000000" />
-            <Setter Property="FontWeight"
-                    Value="Light" />
-        </Style>
+    <Style x:Key="H2Style" TargetType="Paragraph" BasedOn="{StaticResource HeadingStyle}">
+        <Setter Property="FontSize" Value="24" />
+    </Style>
 
-        <Style x:Key="H4Style"
-               TargetType="Paragraph">
-            <Setter Property="FontSize"
-                    Value="14" />
-            <Setter Property="Foreground"
-                    Value="#99000000" />
-            <Setter Property="FontWeight"
-                    Value="Light" />
-        </Style>
+    <Style x:Key="H3Style" TargetType="Paragraph" BasedOn="{StaticResource HeadingStyle}">
+        <Setter Property="FontSize" Value="20" />
+    </Style>
 
-        <Style x:Key="LinkStyle"
+    <Style x:Key="H4Style" TargetType="Paragraph" BasedOn="{StaticResource HeadingStyle}">
+        <Setter Property="FontSize" Value="16" />
+    </Style>
+
+    <Style x:Key="H5Style" TargetType="Paragraph" BasedOn="{StaticResource HeadingStyle}">
+        <Setter Property="FontSize" Value="14" />
+    </Style>
+
+    <Style x:Key="H6Style" TargetType="Paragraph" BasedOn="{StaticResource HeadingStyle}">
+        <Setter Property="FontSize" Value="12" />
+    </Style>
+    <!-- END Heading Style -->
+
+    <Style x:Key="LinkStyle"
                TargetType="Hyperlink">
             <Setter Property="TextDecorations"
                     Value="None" />
