--- a/src/Markdown.Xaml.Demo/MainWindow.xaml
+++ b/src/Markdown.Xaml.Demo/MainWindow.xaml
@@ -22,6 +22,8 @@
                         SeparatorStyle="{StaticResource SeparatorStyle}"
                         TableStyle="{StaticResource TableStyle}"
                         TableHeaderStyle="{StaticResource TableHeaderStyle}"
+                        TableBodyStyle="{StaticResource TableBodyStyle}"
+                        TableRowAltStyle="{StaticResource TableRowAltStyle}"
                         AssetPathRoot="{x:Static system:Environment.CurrentDirectory}"/>
 
         <local:TextToFlowDocumentConverter x:Key="TextToFlowDocumentConverter" 
