--- a/src/Markdown.Xaml.Demo/Markdown.Demo.Styles.Default.xaml
+++ b/src/Markdown.Xaml.Demo/Markdown.Demo.Styles.Default.xaml
@@ -45,6 +45,38 @@
     </Style>
     <!-- END Separator Style -->
 
+    <!-- Table Style -->
+    <!-- 
+         The Table's style don't seem to support border-collapse. 
+         By making the ruled line width 0.5 and applying it to cell and table, 
+         it looks like the ruled lines are not doubled. 
+     -->
+    <Style x:Key="TableStyle" TargetType="Table">
+        <Setter Property="CellSpacing" Value="0"/>
+        <Setter Property="BorderThickness" Value="0.5"/>
+        <Setter Property="BorderBrush" Value="Gray"/>
+        <Style.Resources>
+            <Style TargetType="TableCell">
+                <Setter Property="BorderThickness" Value="0.5"/>
+                <Setter Property="BorderBrush" Value="Gray"/>
+                <Setter Property="Padding" Value="2"/>
+            </Style>
+        </Style.Resources>
+    </Style>
+    
+    <Style x:Key="TableHeaderStyle" TargetType="TableRowGroup">
+        <Setter Property="FontWeight" Value="DemiBold"/>
+        <Setter Property="Background" Value="LightGray"/>
+    </Style>
+
+    <Style x:Key="TableBodyStyle" TargetType="TableRowGroup">
+    </Style>
+
+    <Style x:Key="TableRowAltStyle" TargetType="TableRow">
+        <Setter Property="Background" Value="#05000000" />
+    </Style>
+    <!-- END Table Style -->
+
     <Style x:Key="LinkStyle"
                TargetType="Hyperlink">
             <Setter Property="TextDecorations"
@@ -63,27 +95,5 @@
               </Trigger>
           </Style.Triggers>
       </Style>
-
-      <!-- 
-         The Table's style don't seem to support border-collapse. 
-         By making the ruled line width 0.5 and applying it to cell and table, 
-         it looks like the ruled lines are not doubled. 
-     --> 
-     <Style x:Key="TableStyle" TargetType="Table"> 
-         <Setter Property="CellSpacing" Value="0"/> 
-         <Setter Property="BorderThickness" Value="0.5"/> 
-         <Setter Property="BorderBrush" Value="Gray"/> 
-         <Style.Resources> 
-             <Style TargetType="TableCell"> 
-                 <Setter Property="BorderThickness" Value="0.5"/> 
-                 <Setter Property="BorderBrush" Value="Gray"/> 
-                 <Setter Property="Padding" Value="2"/> 
-             </Style> 
-         </Style.Resources> 
-     </Style> 
-     <Style x:Key="TableHeaderStyle" TargetType="TableRowGroup"> 
-         <Setter Property="FontWeight" Value="DemiBold"/> 
-         <Setter Property="Background" Value="LightGray"/> 
-     </Style> 
 
 </ResourceDictionary>
