--- a/src/Markdown.Xaml.Demo/Markdown.Demo.Styles.Default.xaml
+++ b/src/Markdown.Xaml.Demo/Markdown.Demo.Styles.Default.xaml
@@ -103,9 +103,9 @@
         <Setter Property="Margin" Value="10" />
     </Style>
 
-    <Style x:Key="ImageDownloadFailedStyle" TargetType="Run">
+    <!--<Style x:Key="ImageDownloadFailedStyle" TargetType="Run">
         <Setter Property="Foreground" Value="OrangeRed" />
-    </Style>
+    </Style>-->
     <!-- END Image Style -->
     
     <!-- Code Style -->
